--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/bunyan": "^1.8.6",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.0",
-    "aws-sdk": "^2.551.0",
+    "aws-sdk": "^2.556.0",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.6.4"
@@ -72,6 +72,7 @@
     "mime-types": "^2.1.24",
     "read-chunk": "^3.2.0",
     "request-promise": "^4.2.4",
+    "ts-node": "^8.4.1",
     "uuid": "^3.3.3"
   }
 }
