--- a/package.json
+++ b/package.json
@@ -64,13 +64,15 @@
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
     "bunyan": "^1.8.12",
-    "file-type": "^12.3.0",
+    "crypto": "^1.0.1",
+    "file-type": "^12.3.1",
+    "gm": "^1.23.1",
     "graphql": "^14.5.8",
     "graphql-schema-linter": "^0.2.1",
     "graphql-schema-typescript": "^1.3.1",
     "graphql-tag": "^2.10.1",
-    "mime-types": "^2.1.24",
-    "read-chunk": "^3.2.0",
+    "image-size": "^0.8.3",
+    "mmmagic": "^0.5.3",
     "request-promise": "^4.2.4",
     "ts-node": "^8.4.1",
     "uuid": "^3.3.3"
