--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "test": "jest",
     "lint": "npm run lint-graphql",
-    "lint-graphql": "graphql-schema-linter graphql/*.graphql graphql/schema_aws_appsync.graphql"
+    "lint-graphql": "graphql-schema-linter graphql/*.graphql graphql/schema_aws_appsync.graphql",
+    "postinstall": "rm -rf node_modules/sharp && npm install --arch=x64 --platform=linux --target=10.15.0 sharp"
   },
   "jest": {
     "collectCoverage": true,
@@ -61,6 +62,7 @@
   },
   "dependencies": {
     "@types/mime-types": "^2.1.0",
+    "@types/sharp": "^0.23.0",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
     "bunyan": "^1.8.12",
@@ -72,8 +74,9 @@
     "graphql-schema-typescript": "^1.3.1",
     "graphql-tag": "^2.10.1",
     "image-size": "^0.8.3",
-    "mmmagic": "^0.5.3",
+    "imagemagick": "^0.1.3",
     "request-promise": "^4.2.4",
+    "sharp": "^0.23.1",
     "ts-node": "^8.4.1",
     "uuid": "^3.3.3"
   }
